# lib/floor_control_web/router.ex
@@ -10,6 +10,7 @@ defmodule FloorControlWeb.Router do
     get "/", HealthController, :index
     get "/ready", HealthController, :ready
     get "/groups/:groupId/floor", FloorController, :current_holder
+    get "/groups/:groupId/floor/history", FloorController, :history
     post "/groups/:groupId/floor", FloorController, :obtain
     delete "/groups/:groupId/floor/:userId", FloorController, :release
   end
